--- a/hotelExamen/public/index.html
+++ b/hotelExamen/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="es" ng-app="hotelExamen">
+<html lang="es" ng-app="theStation">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,41 +11,43 @@
   <link rel="stylesheet" href="./sources/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css">
   <link rel="stylesheet" href="./sources/styles.min.css">
 </head>
+
 <body class="font-weight-light">
   <div ui-view></div>
 
-   <!-- Dependencias -->
-   <script src="./lib/bootstrap/jquery.min.js"></script>
-   <script src="./lib/bootstrap/popper.min.js"></script>
-   <script src="./lib/bootstrap/bootstrap.min.js"></script>
-   <script src="./lib/sweetalert/sweetalert.min.js"></script>
-   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjLNkARy_GstbjSzGir_dfXfDrYaH0a-Q" type="text/javascript"></script>
-   <!-- Script de Angular -->
-   <script src="./lib/angular/angular.min.js"></script>
-     <!-- Dependencias de Agular -->
-     <script src="./lib/angular/routing/angular-ui-router.min.js"></script>
-     <script src="./lib/angular/routing/ocLazyLoad.min.js"></script>
-     <script src="./lib/angular/routing/page-title.min.js"></script>
-     <script src="./lib/angular/dependencies/angular-messages.min.js"></script>
-     <script src="./lib/angular/dependencies/angular-scroll.min.js"></script>
-     <script src="./lib/angular/dependencies/ng-file-upload.min.js"></script>
-     <script src="./lib/angular/dependencies/ng-file-upload-shim.min.js"></script>
-     <script src="./lib/angular/dependencies/ng-map.min.js"></script>
-     <script src="./lib/angular/dependencies/angular-animate.min.js"></script>
-   <!-- Script de la aplicación -->
-   <script src="./clases.js"></script>
-   <script src="./app.js"></script>
-   <script src="./route.js"></script>
-    <!-- Directives -->
-      <!-- <script src="./components/directives/inputFile.directive.js"></script>
-      <script src="./components/directives/header/header.directive.js"></script> -->
-
+  <!-- Dependencias -->
+  <script src="./lib/bootstrap/jquery.min.js"></script>
+  <script src="./lib/bootstrap/popper.min.js"></script>
+  <script src="./lib/bootstrap/bootstrap.min.js"></script>
+  <script src="./lib/sweetalert/sweetalert.min.js"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjLNkARy_GstbjSzGir_dfXfDrYaH0a-Q" type="text/javascript"></script>
+  <!-- Script de Angular -->
+  <script src="./lib/angular/angular.min.js"></script>
+    <!-- Dependencias de Agular -->
+    <script src="./lib/angular/routing/angular-ui-router.min.js"></script>
+    <script src="./lib/angular/routing/ocLazyLoad.min.js"></script>
+    <script src="./lib/angular/routing/page-title.min.js"></script>
+    <script src="./lib/angular/dependencies/angular-messages.min.js"></script>
+    <script src="./lib/angular/dependencies/angular-scroll.min.js"></script>
+    <script src="./lib/angular/dependencies/ng-file-upload.min.js"></script>
+    <script src="./lib/angular/dependencies/ng-file-upload-shim.min.js"></script>
+    <script src="./lib/angular/dependencies/ng-map.min.js"></script>
+    <script src="./lib/angular/dependencies/angular-animate.min.js"></script>
+    <!-- Script de la aplicación -->
+    <script src="./clases.js"></script>
+    <script src="./app.js"></script>
+    <script src="./route.js"></script>
       <!--Factorias-->
       <script src="./components/factories/dataStorage.factory.js"></script>
-    <!--Servicios de la aplicación-->
-    <script src="./components/servicio/servicioUsuario.js"></script>
-    <script src="./components/servicio/serviciohotel.js"></script>
-    <script src="./components/servicio/serviciologing.js"></script>
+      <!--Servicios de la aplicación-->
+      <script src="./components/servicio/servicioUsuario.js"></script>
+      <script src="./components/servicio/serviciohotel.js"></script>
+      <script src="./components/servicio/serviciologing.js"></script>
+      <script src="./components/servicio/servicioimagen.js"></script>
+      <!-- Directives -->
+      <script src="./components/directives/inputFile.directiva.js"></script>
+      <script src="./components/directives/header/header.directive.js"></script>
 
 </body>
+
 </html>
