--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
       <!-- Directives -->
       <script src="./components/directives/inputFile.directiva.js"></script>
       <script src="./components/directives/header/header.directive.js"></script>
+      <script src="./components/directives/sidebar/sidebar.directiva.js"></script>
 
 </body>
 
